backend/review-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-service
  labels:
    app: review-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review-service
  template:
    metadata:
      labels:
        app: review-service
    spec:
      serviceAccountName: review-service
      containers:
        - name: review-service
          image: amazon-clone-review-service:latest
          imagePullPolicy: Never
          imagePullPolicy: IfNotPresent
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8010
          readinessProbe:
            httpGet:
              path: /readyz/
              port: 8010
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz/
              port: 8010
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
