backend/review-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: review-service
  labels:
    app: review-service
spec:
  selector:
    app: review-service
  ports:
    - port: 80
      targetPort: 8010
      protocol: TCP
  type: ClusterIP
